[project]
name = "UAP_ML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "narpo0207", email = "143424695+narpo0207@users.noreply.github.com)"},
]
dependencies = ["streamlit>=1.53.0", "pandas>=2.3.3", "numpy>=2.4.1", "scikit-learn>=1.8.0", "joblib>=1.5.3"]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
